--- a/css/footer.css
+++ b/css/footer.css
@@ -68,6 +68,16 @@ footer .tow .col-lg-6 p {
     margin-bottom: 30px;
 }
 
+footer .tow .col-lg-6 .icons {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+footer .tow .col-lg-6 .icons a {
+    display: inline-block;
+}
+
 footer .tow .col-lg-6 .icons i {
     width: 50px;
     height: 50px;
@@ -76,10 +86,8 @@ footer .tow .col-lg-6 .icons i {
     border-radius: 50%;
     background-color: #202020;
     cursor: pointer;
-}
-
-footer .tow .col-lg-6 .icons i:not(:last-child) {
-    margin-right: 15px;
+    color: white;
+    font-size: 24px;
 }
 
 
